--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 /*
- Theme Name:   Rhodos Child
+ Theme Name:   Rhodos Child (for Weave)
  Theme URI:    http://rhodos.axiomthemes.com/
  Description:  Rhodos Child Theme
  Author:       AxiomThemes
