--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -1,3 +1,19 @@
-div.content {
-  background: pink;
+$purple: #262869;
+$red: #971212;
+$orange: #F1931C;
+
+html, body {
+  background: #C7C8CA;
+  font-size: 16px;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700&display=swap');
+
+@font-face {
+  font-family: 'journal';
+  src: url('./fonts/journal-webfont.woff2') format('woff2'),
+  url('./fonts/journal-webfont.woff') format('woff'),
+  url('./fonts/journal-webfont.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
 }
