--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -2,6 +2,10 @@ $purple: #262869;
 $red: #971212;
 $orange: #F1931C;
 
+.trx_addons_scroll_to_top {
+  background-color: $purple !important;
+}
+
 html, body {
   background: #C7C8CA;
   font-size: 16px;
