--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -2,6 +2,8 @@
 @import "core/header.scss";
 @import "core/footer.scss";
 
+
 @import "home/content.scss";
+@import "home/sections.scss";
 
 @import "components/nav-button.scss";
