--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -8,19 +8,6 @@
     justify-content: center;
     margin-bottom: 0.5em;
     min-height: 66vh;
-
-    h2,
-    h3 {
-      font-family: 'journal';
-      color: #fff;
-    }
-
-    h2 {
-      margin-top: 0;
-      font-size: 5em;
-      line-height: 1em;
-    }
-
   }
 }
 
@@ -32,7 +19,7 @@
 
 #content-boxes {
   margin-bottom: 0;
-  color: #fff;
+  //color: #fff;
 
   .box-type-image {
     @media (max-width: 767px) {
@@ -50,8 +37,6 @@
     margin-bottom: 0.5em;
 
     @media (max-width: 767px) {
-
-      background: rgba(0,0,0,0.8);
 
       .box-image {
         position: relative;
@@ -89,9 +74,10 @@
       padding: 5vh 10%;
 
       @media (max-width: 767px) {
-        width: 95vw;
+        width: 90%;
         margin: 2.5vw;
         padding: 5vh 2.5vw;
+        text-align: left;
       }
     }
 
@@ -107,6 +93,7 @@
         display: flex;
         height: 25vw;
         width: 25vw;
+        margin: 12px;
         align-items: center;
         justify-content: center;
 
@@ -127,7 +114,7 @@
 
         h4 {
           position: relative;
-          color: #fff;
+          //color: #fff;
           margin: 0;
         }
 
@@ -155,10 +142,11 @@
 
       p, label {
         flex: 1;
+
       }
 
       label {
-        padding: 1em;
+        padding: 0 0.5em;
       }
 
       span.label {
@@ -166,12 +154,11 @@
       }
 
       @media (max-width: 767px) {
-        margin-top: 4em;
+        margin-top: 3em;
         flex-direction: column;
 
         label {
-          padding-top: 0;
-          padding-bottom: 0;
+          padding: 0;
           line-height: 0;
 
           input {
@@ -183,7 +170,7 @@
 
     input {
       font-family: 'Nunito';
-      color: #fff;
+      //color: #fff;
     }
 
     input[type="text"],
@@ -194,8 +181,14 @@
     }
 
     input[type="submit"] {
+      margin-top: 0;
       background-color: $orange;
-      font-size: 1.5em;
+      font-size: 18px;
+      font-weight: 700;
+
+      @media (max-width: 767px) {
+        margin-top: 1.25em;
+      }
     }
 
     @media (max-width: 767px) {
@@ -216,7 +209,7 @@
       min-width: 300px;
       margin: 5em 0;
       padding: 2em 5vh;
-      color: #fff;
+      //color: #fff;
       z-index: 10;
       background: transparent;
 
