footer; social icons; tweaks to boxes

--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -2,6 +2,7 @@ $purple: #262869;
 $red: #971212;
 $orange: #F1931C;
 $green: #16783C;
+$dkgray: #58595B;
 
 
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700&display=swap');
