--- a/css/sass/core/header.scss
+++ b/css/sass/core/header.scss
@@ -1,4 +1,13 @@
 header#header {
+  display: flex;
+  background-color: #C7C8CA;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 90px;
+  width: 100vw;
+  z-index: 100000;
+
   #top-links,
   #search {
     display: none;
