--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -84,9 +84,11 @@
     .page-links {
       display: flex;
       flex-wrap: wrap;
-      width: 100%;
       flex-direction: row;
       justify-content: center;
+      width: 100%;
+      max-width: 1024px;
+      margin: 0 auto;
       padding-bottom: 3em;
 
       > .page-link {
