--- a/css/sass/home/sections.scss
+++ b/css/sass/home/sections.scss
@@ -8,9 +8,37 @@
 
 #content-boxes {
   #we-are-weavers {
+    min-height: 100vh;
     color: #fff;
+    overflow: hidden;
+
+    .background-video-container {
+      position: absolute;
+      min-height: 100vh;
+      min-width: 100%;
+      z-index: 0;
+    }
+
+    video {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      max-width: none;
+      max-height: none;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: 0;
+      transform: translateX(-50%) translateY(-44vh);
+
+      @media (max-width: 767px) {
+        min-height: 60vh;
+        max-height: 60vh;
+        transform: translateX(-55%) translateY(-70%);
+      }
+    }
 
     .box-wide {
+      position: relative;
       display: flex;
       flex-direction: column;
       width: 40%;
@@ -57,8 +85,15 @@
       background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 99%,rgba(0,0,0,0.65) 100%); /* Chrome10-25,Safari5.1-6 */
       background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 99%,rgba(0,0,0,0.65) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
-
       z-index: 1;
+
+      @media (max-width: 767px) {
+        background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,1) 40%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 40%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,1) 40%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
+
+      }
     }
   }
 
