--- a/css/sass/home/sections.scss
+++ b/css/sass/home/sections.scss
@@ -247,15 +247,33 @@
   }
 
   #newsletter-signup {
+    display: block;
+    min-height: 50vh;
+
     .box-wide {
-      margin: 10vh 0;
+      width: 80%;
+      margin: 10vh auto 0;
+      padding: 0;
       color: #fff;
       font-size: 1.75em;
       font-weight: 400;
       line-height: 1em;
+      //text-align: left;
+
+      @media (max-width: 767px) {
+        width: 90%;
+      }
 
       .highlighted {
         font-weight: 700;
+      }
+    }
+
+    iframe {
+      height: 50vh !important;
+
+      @media (max-width: 767px) {
+        height: 80vh !important;
       }
     }
   }
