--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -47,7 +47,7 @@ body.home.is-loading {
     content: "";
     background: url(img/weave-preload.gif) #fff;
     background-size: 160px;
-    background-position: center center;
+    background-position: center 40vh;
     background-repeat: no-repeat;
     position: absolute;
     top: 0;
