--- a/css/sass/core/header.scss
+++ b/css/sass/core/header.scss
@@ -1,6 +1,6 @@
 header#header {
   display: flex;
-  background-color: #C7C8CA;
+  background-color: #eee;
   position: fixed;
   top: 0;
   left: 0;
@@ -13,8 +13,7 @@ header#header {
     display: none;
   }
 
-  display: flex;
-  background-color: #C7C8CA;
+
 
   h1 {
     margin: 0;
