adds stories and page templates

--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -6,5 +6,7 @@
 @import "home/content.scss";
 @import "home/sections.scss";
 
+@import "pages/content";
+
 @import "components/nav-button.scss";
 @import "forms/salesforce-signup";
