--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -83,6 +83,10 @@
 
     }
 
+    + div {
+      text-align: center;
+    }
+
     label {
       padding: 0 0.5em;
     }
@@ -113,8 +117,10 @@
 
   span.your-message {
     width: 100%;
-    text-area {
-      width: 100%;
+    padding: 0 0.5em;
+
+    textarea {
+
     }
   }
 
