--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -157,7 +157,7 @@
     p {
       width: 90%;
       max-width: 1024px;
-      margin-top: 10vh;
+      margin: 10vh auto;
       color: #fff;
       font-size: 1.75em;
       text-align: center;
