--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -167,6 +167,12 @@
         font-weight: 700;
       }
     }
+
+    @media (max-width: 700px) {
+      iframe {
+        height: 150vh !important;
+      }
+    }
   }
 
 }
