--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -168,8 +168,9 @@
       }
     }
 
-    @media (max-width: 700px) {
-      iframe {
+    iframe {
+      height: 50vh !important;
+      @media (max-width: 700px) {
         height: 70vh !important;
       }
     }
