--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -61,6 +61,12 @@
   article {
     min-height: 33vh;
     margin-top: -10vh;
+    font-size: 18px;
+
+    .post_content iframe {
+      max-width: 80%;
+      margin: 0 10%;
+    }
   }
 
   #contact-form {
