salesforce form closes on redirect

--- a/css/sass/forms/salesforce-signup.scss
+++ b/css/sass/forms/salesforce-signup.scss
@@ -1,3 +1,12 @@
+#successful-signup {
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  transition: opacity 250ms;
+}
+
+
 html {
   background: transparent;
 }
