--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
  Theme Name:   Rhodos Child (for Weave)
  Theme URI:    http://rhodos.axiomthemes.com/
  Description:  Rhodos Child Theme
- Author:       AxiomThemes
- Author URI:   http://axiomthemes.com/
+ Author:       Hattaway Communications
+ Author URI:   http://hattaway.com
  Template:     rhodos
  Version:      1.4
  Tags:         inheritable theme options
