--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -36,6 +36,7 @@ url('./fonts/avenirnext-bold.ttf') format('truetype'),
 html, body {
   background: #C7C8CA;
   font-size: 16px;
+  font-family: 'Nunito', sans-serif !important;
 }
 
 body.home.is-loading {
