--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -39,6 +39,12 @@ html, body {
   font-family: 'Nunito', sans-serif !important;
 }
 
+h3,
+h4,
+h5 {
+  font-family: 'Nunito', sans-serif !important;
+}
+
 body.home.is-loading {
   height: 100vh;
   width: 100vw;
