--- a/css/sass/core/header.scss
+++ b/css/sass/core/header.scss
@@ -27,8 +27,9 @@ header#header {
     }
     #logo {
       img {
-        height: 90px;
-        margin: 0 5vw;
+        width: 400px;
+        height: auto;
+        margin: 16px 2.5vw;
 
         @media (max-width: 767px) {
           width: 140px;
