--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -19,7 +19,7 @@
 
 #content-boxes {
   margin-bottom: 0;
-  //color: #fff;
+  background: #fff;
 
   .box-type-image {
     @media (max-width: 767px) {
@@ -90,6 +90,19 @@
       max-width: 1024px;
       margin: 0 auto;
       padding-bottom: 3em;
+      background: #fff;
+      transition: all 250ms;
+
+      &.loading-new {
+        background: url(img/weave-preload.gif);
+        background-repeat: no-repeat;
+        background-position: center 80%;
+        background-size: 20%;
+
+        @media (max-width: 767px) {
+          background-position: center 70%;
+        }
+      }
 
       > .page-link {
         position: relative;
