--- a/css/sass/home/sections.scss
+++ b/css/sass/home/sections.scss
@@ -105,9 +105,8 @@
 
   #we-can-heal {
     .box-wide {
-      column-count: 2;
-      column-gap: 40px;
-      margin: 8vh 0 4vh;
+      margin-top: 5vh;
+      margin-bottom: 5vh;
 
       h2 {
         margin-top: 0;
