--- a/css/sass/core/elements.scss
+++ b/css/sass/core/elements.scss
@@ -26,7 +26,7 @@ url('./fonts/avenirnext-bold.ttf') format('truetype'),
 
 html, body {
   background: #C7C8CA;
-  font-size: 16px;
+  font-size: 14px !important;
   font-family: 'Nunito', sans-serif !important;
 }
 
