--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -24,6 +24,10 @@
     margin: 0 -15px;
 
     > div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
       flex: 1;
       padding: 0 15px;
 
