removes important style overrides

--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -183,9 +183,9 @@
     }
 
     iframe {
-      height: 50vh !important;
+      height: 50vh;
       @media (max-width: 700px) {
-        height: 70vh !important;
+        height: 70vh;
       }
     }
   }
