fix iframes for elementor

--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -57,10 +57,10 @@
   .nav-links-single,
   .related_wrap {
     position: relative;
-    width: 80%;
+    width: 90%;
     max-width: 1024px;
     margin: 0 auto;
-    padding: 5%;
+    padding: 0;
     background: #fff;
   }
 
