--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
     .weaver-template-default article .post_content iframe, .page-template-default article .post_content iframe {
         max-width: 100%;
         margin: 0;
-        height: 33vh;
+        /*height: 33vh;*/
     }
 }
 .wFormContainer input[type="submit"], .wFormContainer #submit_button {
