--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -57,11 +57,16 @@
   .nav-links-single,
   .related_wrap {
     position: relative;
-    width: 90%;
+    width: 80%;
     max-width: 1024px;
     margin: 0 auto;
-    padding: 0;
+    padding: 5%;
     background: #fff;
+
+    @media (max-width: 767px) {
+      width: 90%;
+      padding: 0;
+    }
   }
 
   article {
