fix iframes without elementor 3

--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -64,8 +64,8 @@
     background: #fff;
 
     @media (max-width: 767px) {
-      width: 90%;
-      padding: 0;
+      //width: 90%;
+      //padding: 0;
     }
   }
 
@@ -77,6 +77,11 @@
     .post_content iframe {
       max-width: 80%;
       margin: 0 10%;
+      max-height: 50vh;
+
+      @media (max-width: 767px) {
+        max-height: 180px;
+      }
     }
   }
 
