--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -1,5 +1,6 @@
 .weaver-template-default,
-.page-template-default {
+.page-template-default,
+.page-template-page-join {
 
   .page_content_wrap {
     padding-top: 0;
@@ -205,5 +206,22 @@
       text-align: left !important;
     }
   }
+}
 
+#signup-copy {
+  max-width: 960px;
+  margin: 0 auto;
+
+  h2 {
+    text-align: center;
+
+    strong {
+      color: #fff;
+    }
+  }
+  p {
+    width: 100% !important;
+    margin: 0 0 1em !important;
+    text-align: left !important;
+  }
 }
