--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -1,6 +1,7 @@
 .weaver-template-default,
 .page-template-default,
-.page-template-page-join {
+.page-template-page-join,
+.page-template-page-stories {
 
   .page_content_wrap {
     padding-top: 0;
@@ -56,7 +57,8 @@
 
   article,
   .nav-links-single,
-  .related_wrap {
+  .related_wrap,
+  #stories {
     position: relative;
     width: 80%;
     max-width: 1024px;
@@ -225,3 +227,15 @@
     text-align: left !important;
   }
 }
+
+.page-template-page-stories {
+  article {
+    min-height: 120px;
+    padding-bottom: 0;
+  }
+
+  #stories {
+
+  }
+}
+
