--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -217,7 +217,7 @@
       flex-basis: 100%;
     }
 
-    &:nth-of-type(1n+4) {display: none;}
+    &.home-link:nth-of-type(1n+4) {display: none;}
 
     .page-thumbnail {
       position: absolute;
