--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -219,6 +219,10 @@
 
     &.home-link:nth-of-type(1n+4) {display: none;}
 
+    &.roll-link {
+      text-align: center;
+    }
+
     .page-thumbnail {
       position: absolute;
       height: 100%;
