--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -250,14 +250,14 @@
 
   #staff {
     &:before {
-      content: "The Weave Team";
-      display: block;
-      width: 100%;
-      margin-bottom: 1em;
-      color: #000;
-      font-family: AvenirNext-Bold !important;
-      font-size: 2.5em;
-      font-weight: 700;
+      //content: "The Weave Team";
+      //display: block;
+      //width: 100%;
+      //margin-bottom: 1em;
+      //color: #000;
+      //font-family: AvenirNext-Bold !important;
+      //font-size: 2.5em;
+      //font-weight: 700;
 
     }
   }
