--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -262,9 +262,10 @@
     }
   }
 
-  .page-link:hover {
-    transofrm: none;
-    &:after {
+  .page-link{
+    transform: none;
+    &:after,
+    &:hover:after {
       background: none !important;
     }
   }
