--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -247,7 +247,9 @@
       text-align: left;
     }
   }
+}
 
+.page-template-page-about {
   #staff {
     &:before {
       //content: "The Weave Team";
