--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -314,3 +314,32 @@
 
 }
 
+.team-template-default {
+  #hero h1 {
+    display: none;
+  }
+
+  .bio {
+    min-height: auto;
+    padding-bottom: 10vh;
+
+    h1 {
+      margin-top: -1em;
+      margin-bottom: 0.25em;
+    }
+
+    span {
+      display: block;
+      margin-bottom: 1em;
+
+      &.title {
+        font-weight: 700;
+      }
+    }
+
+    + article {
+      padding-top: 1.5em;
+    }
+  }
+}
+
