--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -336,6 +336,10 @@
       &.title {
         font-weight: 700;
       }
+
+      &.quote {
+        font-style: italic;
+      }
     }
 
     + article {
