--- a/css/sass/home/content.scss
+++ b/css/sass/home/content.scss
@@ -174,6 +174,13 @@
   background: #fff;
   transition: all 250ms;
 
+  + .weave-button {
+
+    @media (min-width: 768px) {
+      display: none !important;
+    }
+  }
+
   &.loading-new {
 
     &:before {
@@ -217,7 +224,9 @@
       flex-basis: 100%;
     }
 
-    &.home-link:nth-of-type(1n+4) {display: none;}
+    @media (max-width: 767px) {
+      &.home-link:nth-of-type(1n+4) {display: none;}
+    }
 
     &.roll-link {
       text-align: center;
@@ -267,7 +276,8 @@
       }
 
       &:after {
-        background: rgba(22, 120, 60, 0.4);
+        //background: rgba(22, 120, 60, 0.4);
+        background: rgba(0, 0, 0, 0.2);
       }
     }
 
@@ -280,7 +290,8 @@
         opacity: 1 !important;
       }
       &:after {
-        background: rgba(22, 120, 60, 0.4);
+        //background: rgba(22, 120, 60, 0.4);
+        background: rgba(0, 0, 0, 0.2);
       }
     }
   }
