font weave-the-ppl

--- a/css/sass/home/sections.scss
+++ b/css/sass/home/sections.scss
@@ -125,6 +125,10 @@
         }
       }
 
+      h5 {
+        margin-top: 0;
+      }
+
       p {
         text-align: left;
         font-size: 1.125em;
