--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -1,3 +1,4 @@
+.page-template-donate,
 .weaver-template-default,
 .team-template-default,
 .page-template-default,
@@ -49,10 +50,10 @@
       left: 0;
       height: 50%;
       width: 100%;
-      background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 99%, rgba(0,0,0,0.65) 100%); /* FF3.6-15 */
-      background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 99%,rgba(0,0,0,0.65) 100%); /* Chrome10-25,Safari5.1-6 */
-      background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 99%,rgba(0,0,0,0.65) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
+      background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 99%, rgba(0, 0, 0, 0.65) 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 99%, rgba(0, 0, 0, 0.65) 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 99%, rgba(0, 0, 0, 0.65) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#a6000000', GradientType=0); /* IE6-9 */
       z-index: 1;
     }
   }
@@ -62,8 +63,7 @@
   .related_wrap,
   #stories,
   #staff
-  .weave-stories,
-  {
+  .weave-stories {
     position: relative;
     width: 80%;
     max-width: 1024px;
@@ -76,14 +76,31 @@
       //padding: 0;
     }
   }
+  article {
+    margin-top: -10vh;
+    font-size: 18px;
 
-  .nav-links-single {
-    padding-top: 1em;
+    &.post_item_single {
+      padding-bottom: 1em;
+    }
 
-    .nav-links {
-      margin-top: 0;
+    .post_content iframe {
+      max-width: 80%;
+      margin: 0 10%;
+
+      @media (max-width: 767px) {
+        max-height: 180px;
+      }
     }
   }
+}
+
+.weaver-template-default,
+.team-template-default,
+.page-template-default,
+.page-template-page-about,
+.page-template-page-join,
+.page-template-page-stories {
 
   article {
     min-height: 33vh;
@@ -103,6 +120,14 @@
       @media (max-width: 767px) {
         max-height: 180px;
       }
+    }
+  }
+
+  .nav-links-single {
+    padding-top: 1em;
+
+    .nav-links {
+      margin-top: 0;
     }
   }
 
