updates the donate form 4

--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -89,7 +89,7 @@
       margin: 0 10%;
 
       @media (max-width: 767px) {
-        max-height: 180px;
+        //max-height: 180px;
       }
     }
   }
