--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -396,3 +396,10 @@ body:not(.home) .content {
   }
 }
 
+.error404 {
+  .content {
+    background-image: none;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+  }
+}
