--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -74,6 +74,8 @@
     @media (max-width: 767px) {
       //width: 90%;
       //padding: 0;
+      padding: 1em 0 !important;
+      width: 90%;
     }
   }
   article {
