help-us-content link colors

--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -429,3 +429,11 @@ body:not(.home) .content {
     margin-bottom: 10vh;
   }
 }
+
+.help-us-content {
+  ul li {
+    a {
+      color: $purple
+    }
+  }
+}
