help-us-content link colors2

--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -430,8 +430,8 @@ body:not(.home) .content {
   }
 }
 
-.help-us-content {
-  ul li {
+ul.help-us-content {
+  li {
     a {
       color: $purple
     }
