remove iframe spaces 2

--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -144,7 +144,7 @@
       //max-height: 50vh;
 
       @media (max-width: 767px) {
-        //max-height: 180px;
+        max-height: 180px;
       }
     }
   }
