--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -286,6 +286,46 @@
   }
 }
 
+.page-template-page-team {
+  article.post_item_single {
+    min-height: 0;
+  }
+
+  #weave-team {
+    padding-top: 0;
+    align-items: center;
+    justify-content: center;
+
+    .wp-block-columns {
+      align-items: center;
+      justify-content: center;
+    }
+
+    h3 {
+      margin-top: 0;
+      margin-bottom: 0;
+
+      + h5 {
+        margin-top: 2px;
+        margin-bottom: 4px;
+      }
+
+    }
+
+    p.quote {
+      color: $purple;
+      font-size: 0.875em;
+      font-style: italic;
+    }
+
+    p:not(.quote) {
+      font-size: 1.125em;
+      line-height: 1.25em !important;
+    }
+  }
+}
+
+
 body:not(.home) .content {
   background-image: url('./img/signup_bg.jpg');
   background-size: 100vw;
@@ -376,7 +416,7 @@ body:not(.home) .content {
     //}
   }
 
-  p.quote {
+  p.title{
     min-height: 2em;
   }
 
