--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -296,7 +296,9 @@
     align-items: center;
     justify-content: center;
 
-    .wp-block-columns {
+    .team-member {
+      margin-top: -120px;
+      padding-top: 120px;
       align-items: center;
       justify-content: center;
     }
