--- a/css/sass/pages/content.scss
+++ b/css/sass/pages/content.scss
@@ -301,6 +301,7 @@
       padding-top: 120px;
       align-items: center;
       justify-content: center;
+      margin-bottom: 24px;
     }
 
     h3 {
